--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,9 @@ lazy_static = "1"
 # Base64 encoding
 base64 = "0.22"
 
+# YAML parsing (for capability definitions and agent cards)
+serde_yaml = "0.9"
+
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3"
